force-app/main/default/objects/Ad_Spend__c/Ad_Spend__c.object-meta.xml
<CustomObject>
    <description>Workbook-defined ad spend records.</description>
    <label>Ad Spend</label>
    <nameField>
        <displayFormat>ADS-{0000000}</displayFormat>
        <label>Ad Spend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Spends</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>