force-app/main/default/objects/Ad_Spend__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Ad Spend Records</relationshipLabel>
    <relationshipName>Ad_Spend</relationshipName>
    <type>Lookup</type>
</CustomField>