force-app/main/default/objects/Ad_Spend__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Meta</fullName><default>false</default><label>Meta</label></value>
            <value><fullName>Google</fullName><default>false</default><label>Google</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>