force-app/main/default/objects/Ad_Spend__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Ad spend fields</label>
    <type>Date</type>
</CustomField>