force-app/main/default/objects/Ad_Spend__c/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <externalId>true</externalId>
    <label>Ad spend fields</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>