force-app/main/default/objects/Ad_Spend__c/fields/Spend__c.field-meta.xml
<CustomField>
    <fullName>Spend__c</fullName>
    <label>Ad spend fields</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>